--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,20 +1,33 @@
-<%= form_with(model: Contact, local: true) do |form| %>
-  <div class="name">
+<%= form_with(model: @contact, local: true) do |form| %>
+  <% if @contact.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= @contact.errors.count %>件のエラーがあります。</h2>
+        <ul>
+
+        <% @contact.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
+  <% end %>
+  <div class="contact_name">
     <%= form.label :name %>
     <br>
-    <%= form.text_field :name %>
+    <%= form.text_field :name , autocomplete: 'off'%>
   </div>
-  <div class="email">
+  <div class="contact_email">
     <%= form.label :email %>
     <br>
     <%= form.text_field :email %>
   </div>
-  <div class="contact">
-    <%= form.label :contact %>
+  <div class="contact_content">
+    <%= form.label :content %>
     <br>
-    <%= form.text_field :contact %>
+    <%= form.text_field :content %>
   </div>
   
    <%= form.submit %>
+  
+  
   
 <% end %>
