--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,3 +1,4 @@
+<p><%= notice %></p>
 <%= form_with(model: @contact, local: true) do |form| %>
   <% if @contact.errors.any? %>
       <div id="error_explanation">
